Motoman/MotoComSDK/motocom32dll/Samples/MotocomDemoCSharp/MotocomdotNetWrapper/CMotocom.cs


        [DllImport("MotoCom32.dll", EntryPoint = "_BscIsRobotPos@24")]
        public static extern short BscIsRobotPos(short nCid, StringBuilder framename, short isex, ref short rconf, ref short toolno, ref double p);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscIsServo@4")]
        public static extern short BscIsServo(short nCid);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscIsTaskInf@4")]
        public static extern short BscIsTaskInf(short nCid);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscIsTaskInfDx@4")]
        public static extern short BscIsTaskInfDx(short nCid);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscIsTaskInfXrc@4")]
        public static extern short BscIsTaskInfXrc(short nCid);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscIsTeachMode@4")]
        public static extern short BscIsTeachMode(short nCid);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscJobWait@8")]
        public static extern short BscJobWait(short nCid, short time);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscMDSP@8")]
        public static extern short BscMDSP(short nCid, StringBuilder ptr);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscMov@36")]
        public static extern short BscMov(short nCid, StringBuilder movtype, StringBuilder vtype, double spd, StringBuilder framename, short rconf, short toolno, ref double p);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscMovEx@40")]
        public static extern short BscMovEx(short nCid, StringBuilder movtype, StringBuilder vtype, double spd, StringBuilder framename, int rconf, short toolno, ref double p, short axisNum);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscMovj@28")]
        public static extern short BscMovj(short nCid, double spd, StringBuilder framename, short rconf, short toolno, ref double p);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscMovjEx@32")]
        public static extern short BscMovjEx(short nCid, double spd, StringBuilder framename, int rconf, short toolno, ref double p, short axisNum);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscMovl@32")]
        public static extern short BscMovl(short nCid, StringBuilder vtype, double spd, StringBuilder framename, short rconf, short toolno, ref double p);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscMovlEx@36")]
        public static extern short BscMovlEx(short nCid, StringBuilder vtype, double spd, StringBuilder framename, int rconf, short toolno, ref double p, short axisNum);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscOpen@8")]
        public static extern short BscOpen(string path, short mode);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscOPLock@4")]
        public static extern short BscOPLock(short nCid);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscOPUnLock@4")]
        public static extern short BscOPUnLock(short nCid);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscOutBytes@4")]
        public static extern short BscOutBytes(short nCid);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscPMov@28")]
        public static extern short BscPMov(short nCid, StringBuilder movtype, StringBuilder vtype, double spd, short toolno, ref double p);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscPMovEx@32")]
        public static extern short BscPMovEx(short nCid, StringBuilder movtype, StringBuilder vtype, double spd, short toolno, ref double p, short axisNum);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscPMovj@20")]
        public static extern short BscPMovj(short nCid, double spd, short toolno, ref double p);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscPMovjEx@24")]
        public static extern short BscPMovjEx(short nCid, double spd, short toolno, ref double p, short axisNum);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscPMovl@24")]
        public static extern short BscPMovl(short nCid, StringBuilder vtype, double spd, short toolno, ref double p);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscPMovlEx@28")]
        public static extern short BscPMovlEx(short nCid, StringBuilder vtype, double spd, short toolno, ref double p, short axisNum);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscPuts@12")]
        public static extern short BscPuts(short nCid, StringBuilder bufptr, short length);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscPutUFrame@12")]
        public static extern short BscPutUFrame(short nCid, StringBuilder ufname, ref double p);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscPutVarData@16")]
        public static extern short BscPutVarData(short nCid, short type_v, short varno, ref double dat);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscPutVarData2@20")]
        public static extern short BscPutVarData2(short nCid, short type_v, short varno, ref double dat, short axisNum);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscPutVarDataEx@24")]
        public static extern short BscPutVarDataEx(short nCid, short type_v, short varno, ref double dat, StringBuilder s, short axisNum);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscReadAlarmS@12")]
        public static extern short BscReadAlarmS(short nCid, ref short data_v, StringBuilder s);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscReadIO@16")]
        public static extern short BscReadIO(short nCid, short startadd, short ionum, ref short stat);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscReadIO2@16")]
        public static extern short BscReadIO2(short nCid, int startadd, short ionum, ref short stat);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscReConnect@4")]
        public static extern short BscReConnect(short nCid);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscReset@4")]
        public static extern short BscReset(short nCid);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscReStartJob@4")]
        public static extern short BscReStartJob(short nCid);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscSelectJob@8")]
        public static extern short BscSelectJob(short nCid, string name_v);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscSelectMode@8")]
        public static extern short BscSelectMode(short nCid, short mode);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscSelLoopCycle@4")]
        public static extern short BscSelLoopCycle(short nCid);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscSelOneCycle@4")]
        public static extern short BscSelOneCycle(short nCid);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscSelStepCycle@4")]
        public static extern short BscSelStepCycle(short nCid);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscServoOff@4")]
        public static extern short BscServoOff(short nCid);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscServoOn@4")]
        public static extern short BscServoOn(short nCid);

        // Declare Function BscSetAbso Lib "MotoCom32" Alias "_BscSetAbso@12" (ByVal nCid%, ByVal axisno%, ByVal abso&) As Integer
        [DllImport("MotoCom32.dll", EntryPoint = "_BscSetBreak@8")]
        public static extern short BscSetBreak(short nCid, short flg);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscSetCom@24")]
        public static extern short BscSetCom(short nCid, short port, int baud, short parity, short clen, short stp);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscSetCondBSC@20")]
        public static extern short BscSetCondBSC(short nCid, short timerA, short timerB, short rtyR, short rtyW);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscSetCtrlGroup@8")]
        public static extern short BscSetCtrlGroup(short nCid, short groupno);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscSetCtrlGroupDx@12")]
        public static extern short BscSetCtrlGroupDx(short nCid, int groupno1, int groupno2);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscSetCtrlGroupXrc@12")]
        public static extern short BscSetCtrlGroupXrc(short nCid, short groupno1, short groupno2);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscSetEServer@8")]
        public static extern short BscSetEServer(short nCid, string IPaddr);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscSetEServerMode@12")]
        public static extern short BscSetEServerMode(short nCid, StringBuilder IPaddr, short mode);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscSetEther@16")]
        public static extern short BscSetEther(short nCid, StringBuilder IPaddr, short mode, int hWnd);

        // Declare Function BscSetHSL Lib "MotoCom32" Alias "_BscSetHSL@12" (ByVal nCid%, ByVal strName$, ByVal port%) As Integer
        [DllImport("MotoCom32.dll", EntryPoint = "_BscSetLineNumber@8")]
        public static extern short BscSetLineNumber(short nCid, short line_v);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscSetMasterJob@4")]
        public static extern short BscSetMasterJob(short nCid);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscStartJob@4")]
        public static extern short BscStartJob(short nCid);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscStatus@20")]
        public static extern short BscStatus(short nCid, StringBuilder hpt, StringBuilder dpt, short sz, StringBuilder rbuf);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscUpLoad@8")]
        public static extern short BscUpLoad(short nCid, StringBuilder fname);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscUpLoadEx@16")]
        public static extern short BscUpLoadEx(short nCid, StringBuilder fname, StringBuilder desPath, bool nFlg);

        // Declare Function BscUpLoadTRQ_HM Lib "MotoCom32" Alias "_BscUpLoadTRQ_HM@16" (ByVal nCid%, ByVal fname$, ByVal nType, ByVal nNo) As Integer
        // Declare Function BscUpLoadTRQ Lib "MotoCom32" Alias "_BscUpLoadTRQ@8" (ByVal nCid%, ByVal fname$) As Integer
        [DllImport("MotoCom32.dll", EntryPoint = "_BscWriteIO@16")]
        public static extern short BscWriteIO(short nCid, short startadd, short ionum, ref short stat);

        [DllImport("MotoCom32.dll", EntryPoint = "_BscWriteIO2@16")]
        public static extern short BscWriteIO2(short nCid, int startadd, short ionum, ref short stat);

        #endregion
    }
}
